--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -208,6 +208,17 @@
           "secondary_button_label": "{{ shop.brand.colors.primary[0].background }}",
           "shadow": "{{ shop.brand.colors.secondary[0].background }}"
         }
+      },
+      "scheme-0cf8f8cb-efab-4593-9a11-d9e4036b83d5": {
+        "settings": {
+          "background": "{{ shop.brand.colors.primary[0].foreground }}",
+          "background_gradient": "",
+          "text": "#000000",
+          "button": "{{ shop.brand.colors.primary[0].background }}",
+          "button_label": "#ffffff",
+          "secondary_button_label": "{{ shop.brand.colors.primary[0].background }}",
+          "shadow": "{{ shop.brand.colors.primary[0].foreground }}"
+        }
       }
     }
   },
