Add new "Feature Cards" block to "Custom Image with Text" section, allowing users to showcase icons and details. Update CSS for layout and responsiveness, and introduce new settings in templates for enhanced customization options.

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -230,6 +230,17 @@
           "secondary_button_label": "{{ shop.brand.colors.primary[0].background }}",
           "shadow": "{{ shop.brand.colors.primary[0].foreground }}"
         }
+      },
+      "scheme-1b712716-c289-4973-9398-e76fdf4f9ee4": {
+        "settings": {
+          "background": "#ffffff",
+          "background_gradient": "linear-gradient(274deg, rgba(255, 102, 196, 0.8) 5%, rgba(255, 110, 175, 1) 43%, rgba(255, 102, 196, 1) 91%)",
+          "text": "{{ shop.brand.colors.secondary[1].background }}",
+          "button": "{{ shop.brand.colors.secondary[1].background }}",
+          "button_label": "{{ shop.brand.colors.secondary[0].background }}",
+          "secondary_button_label": "{{ shop.brand.colors.secondary[1].background }}",
+          "shadow": "{{ shop.brand.colors.secondary[0].background }}"
+        }
       }
     }
   },
