--- a/shopify.theme.toml
+++ b/shopify.theme.toml
@@ -1,4 +1,4 @@
-[environments.dev]
+[environments.local]
 theme = "146593448101"
 store = "dearrface.myshopify.com"
 password = "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"
