--- a/shopify.theme.toml
+++ b/shopify.theme.toml
@@ -3,7 +3,7 @@ theme = "146593448101"
 store = "dearrface.myshopify.com"
 password = "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"
 
-[environments.live]
+[environments.dev]
 theme = "146435604645"
 store = "dearrface.myshopify.com"
 password = "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"
